src/tests/let_statements/snapshots/monkey_interpreter__tests__let_statements__test_let_statement_case_8_lexical_analysis.snap
---
source: src/tests/let_statements/mod.rs
expression: tokens

---
[
    Let,
    Identifier {
        literal: "is_directory",
    },
    Assign,
    False,
    SemiColon,
    EndOfFile,
]
