src/tests/let_statements/snapshots/monkey_interpreter__tests__let_statements__test_let_statement_case_9_syntax_analysis.snap
---
source: src/tests/let_statements/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "file",
            expression: String {
                literal: "/tmp/temp.txt",
            },
        },
    },
]
